[TRY] image linking

--- a/_posts/2014-01-29-under-way....md
+++ b/_posts/2014-01-29-under-way....md
@@ -12,7 +12,7 @@ As for me and my style, I like to think that innovation lies in simplicity. If y
 
 I go about creating prototypes by thinking of an action and building off of it. Take Blur for instance. The action? Switching between tracks - Boson X-like. I then went to implement that as simply as possible. Add a couple of enemies and a constraint, and we get Blur. The game revolves around the core mechanic, and builds off of it. From Charmie of funstorm so elegantly puts it:
 
-[{{ site.url }}assets/images/blog/2014/01/corediagram.png]{:height="400px" width="400px" style="image-align: center"}
+![/assets/images/blog/2014/01/corediagram.png]{:height="400px" width="400px" style="image-align: center"}
 
 Although Charmie goes into the outer layers of a game too, I feel it's the inner-nucleus that is most important. For without the nucleus, it is impossible for the game as a whole to be fun. It's like the caramel-onions corrupt teenagers give out at Halloween - no matter how much caramel and sprinkles they put on it, it still tastes like an onion. Without a good core mechanic, a visually awesome game isn't so awesome.
 
