--- a/_posts/2014-01-29-under-way....md
+++ b/_posts/2014-01-29-under-way....md
@@ -12,7 +12,7 @@ As for me and my style, I like to think that innovation lies in simplicity. If y
 
 I go about creating prototypes by thinking of an action and building off of it. Take Blur for instance. The action? Switching between tracks - Boson X-like. I then went to implement that as simply as possible. Add a couple of enemies and a constraint, and we get Blur. The game revolves around the core mechanic, and builds off of it. From Charmie of funstorm so elegantly puts it:
 
-![core diagram](1){:height="400px" width="400px" style="image-align: center"}
+![core diagram]({{ site.url }}assets/images/blog/2014/01/corediagram.png){: height="400px" width="400px" style="text-align: center"}
 
 Although Charmie goes into the outer layers of a game too, I feel it's the inner-nucleus that is most important. For without the nucleus, it is impossible for the game as a whole to be fun. It's like the caramel-onions corrupt teenagers give out at Halloween - no matter how much caramel and sprinkles they put on it, it still tastes like an onion. Without a good core mechanic, a visually awesome game isn't so awesome.
 
@@ -21,5 +21,3 @@ Not all games fit this model well though. Take any of the GTA series for example
 So, the single core mechanic is by no means an end-all, be-all, but I feel when dealing with smaller-scope games, especially mobile, it's important for the main mechanic, whether it be flinging birds or running endlessly while sliding and turning, to be spot on.
 
 That's how I go about design.
-
-[1]:{{ site.url }}assets/images/blog/2014/01/corediagram.png
