--- a/_posts/2017-03-13-PAX-relax.md
+++ b/_posts/2017-03-13-PAX-relax.md
@@ -11,7 +11,7 @@ I write this sitting on a beach. It's relaxing, but I'm more worried about getti
     <figcaption>Yes, Richard <em>is</em> design. Players are able to draw with markers on the whiteboard. On the right, we were quite excited for PAX, and you can see our new characters.</figcaption>
 </figure>
 
-We learned so much at PAX. Our tutorial can be smoother, and that's something we've noted for a while now – the game has just been evolving at such a rapid pace that we've neglected it. We are planning to add button prompts above the relative items for each stage of the tutorial to help engrain what buttons perform which actions. This also shows the pitfalls of Playstation vs Xbox controllers, with PS' X button being Xbox's A button, and on the Xbox controllers, we use both X and A a lot, so to people who play more on Playstation, their controllers are different, and muscle memory took over. Otherwise, the booth was really well presented; [Will](http://willconcannonart.com) did a great job creating marketing materials for it. I really hope Champlain believes we represented them well. We seemed to have a constant flux of people playing, and we even had lines at the busier moments, which is a huge boost of pride to the team.
+We learned so much at PAX – we had over a thousand people play a round or two! Our tutorial can be smoother, and that's something we've noted for a while now – the game has just been evolving at such a rapid pace that we've neglected it. We are planning to add button prompts above the relative items for each stage of the tutorial to help engrain what buttons perform which actions. This also shows the pitfalls of Playstation vs Xbox controllers, with PS' X button being Xbox's A button, and on the Xbox controllers, we use both X and A a lot, so to people who play more on Playstation, their controllers are different, and muscle memory took over. Otherwise, the booth was really well presented; [Will](http://willconcannonart.com) did a great job creating marketing materials for it. I really hope Champlain believes we represented them well. We seemed to have a constant flux of people playing, and we even had lines at the busier moments, which is a huge boost of pride to the team.
 
 <figure class="half">
     <a href="/assets/images/blog/2017/03/OM_businesscard.jpg"><img src="/assets/images/blog/2017/03/OM_businesscard.jpg"></a>
